setup paper template.

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -62,7 +62,7 @@ We are grateful to <Names>, as well as to audiences at the <Conferences> and sem
 This work was supported by <Grants>.
 }}
 %% Authors
-\author{Fabien Petit\thanks{University College London, CEPEO. Email: \href{mailto:f.petit@ucl.ac.uk}{f.petit@ucl.ac.uk}. Website: \href{www.fabienpetit.com}{fabienpetit.com}.}
+\author{Hyoungchul Kim\thanks{The Wharton School, University of Pennsylvania. Email: \href{mailto:hchulkim@wharton.upenn.edu}{hchulkim@wharton.upenn.edu}. Website: \href{hchulkim.github.io}{hchulkim.github.io}.}
 \and
 Author2\thanks{Affiliation2. Email: \href{mailto:email2}{email2}. Website: \href{website1}{website2}.}}
 
