finalize slide for the econ meet-up.

--- a/slide/slide.tex
+++ b/slide/slide.tex
@@ -138,6 +138,13 @@ $\implies$ I plan to discuss about some tools I have been looking into during la
 
 \begin{frame}{Conda (mamba) environment}
 Solution to problem in Renv: Use conda environment!
+\begin{itemize}
+	\item Conda provides separate virtual environment to store packages.
+	\item You can also track version of R and Python itself.
+	\item It works on other languages such as Python, etc.
+	\item Caveat: Cannot still track dependencies of the dependencies (e.g. pip).
+	\item Only install through conda.
+\end{itemize}
 
 \end{frame}
 
